@@ -2,6 +2,22 @@
 #include "resource.h"
 #include "NotesDialog.h"
 
+LRESULT NotesEdit::WndProc(UINT msg, WPARAM wparam, LPARAM lparam)
+{
+   switch (msg)
+   {
+   case WM_KEYUP:
+      if (wparam == VK_RETURN)
+      {
+         // stupid win32 edit control. add a CR/LF to the end of each line manually
+         AppendText("\r\n");
+         return FALSE;
+      }
+   }
+   return WndProcDefault(msg, wparam, lparam);
+
+}
+
 NotesDialog::NotesDialog() : CDialog(IDD_NOTES_DIALOG)
 {
 }
@@ -13,16 +29,22 @@ BOOL NotesDialog::OnInitDialog()
    AttachItem(IDC_NOTES_EDIT, m_notesEdit);
    m_resizer.AddChild(m_notesEdit.GetHwnd(), topright, RD_STRETCH_HEIGHT|RD_STRETCH_WIDTH);
 
-   CCO(PinTable)* const pt = g_pvp->GetActiveTable();
-   if (pt != nullptr)
-   {
-      SetText(pt->GetNotesText());
-   }
-   return FALSE;
+   SetText();
+   return TRUE;
 }
 
 BOOL NotesDialog::OnCommand(WPARAM wParam, LPARAM lParam)
 {
+   UNREFERENCED_PARAMETER(lParam);
+
+   switch (HIWORD(wParam))
+   {
+      case EN_KILLFOCUS:
+      {
+         UpdateText();
+         return TRUE;
+      }
+   }
    return FALSE;
 }
 
@@ -32,29 +54,35 @@ INT_PTR NotesDialog::DialogProc(UINT uMsg, WPARAM wParam, LPARAM lParam)
    return DialogProcDefault(uMsg, wParam, lParam);
 }
 
-
 bool NotesDialog::PreTranslateMessage(MSG* msg)
 {
    if (!IsWindow())
       return false;
 
-   // only pre-translate mouse and keyboard input events
-//    if (((msg->message >= WM_KEYFIRST && msg->message <= WM_KEYLAST) || (msg->message >= WM_MOUSEFIRST && msg->message <= WM_MOUSELAST)))
-//    {
-//       const int keyPressed = LOWORD(msg->wParam);
-//       // only pass F1-F12 to the main VPinball class to open subdialogs from everywhere
-//       if (keyPressed >= VK_F1 && keyPressed <= VK_F12 && TranslateAccelerator(g_pvp->GetHwnd(), g_haccel, msg))
-//          return true;
-//    }
-
    return !!IsDialogMessage(*msg);
+}
+
+void NotesDialog::SetText()
+{
+   CCO(PinTable)* const pt = g_pvp->GetActiveTable();
+   if (pt != nullptr)
+   {
+      m_notesEdit.SetWindowText(pt->GetNotesText().c_str());
+   }
+
+}
+
+void NotesDialog::UpdateText()
+{
+   CCO(PinTable)* const pt = g_pvp->GetActiveTable();
+   if (pt != nullptr)
+      pt->SetNotesText(GetText());
 }
 
 CContainNotes::CContainNotes()
 {
    SetView(m_notesDialog);
    SetTabText(_T("Notes"));
-   //SetTabIcon(IDI_TOOLBAR);
    SetDockCaption(_T("Notes"));
 
 }
@@ -65,28 +93,15 @@ CDockNotes::CDockNotes()
    SetBarWidth(4);
 }
 
+void CDockNotes::UpdateText()
+{
+   m_notesContainer.GetNotesDialog()->UpdateText();
+}
+
 void CDockNotes::OnClose()
 {
-   CCO(PinTable)* const pt = g_pvp->GetActiveTable();
-   if (pt == nullptr)
-      return;
-   pt->SetNotesText(m_notesContainer.GetNotesDialog()->GetText());
-
+   UpdateText();
    CDocker::OnClose();
+   g_pvp->DestroyNotesDocker();
 }
 
-LRESULT NotesEdit::WndProc(UINT msg, WPARAM wparam, LPARAM lparam)
-{
-   switch (msg)
-   {
-      case WM_KEYUP:
-         if (wparam == VK_RETURN)
-         {
-            // stupid win32 edit control. add a CR/LF to the end of each line manually
-            AppendText("\r\n");
-            return FALSE;
-         }
-   }
-   return WndProcDefault(msg, wparam, lparam);
-
-}
