@@ -1938,7 +1938,10 @@ HRESULT Player::Init()
    g_pvp->GetPropertiesDocker()->EnableWindow(FALSE);
    g_pvp->GetLayersDocker()->EnableWindow(FALSE);
    g_pvp->GetToolbarDocker()->EnableWindow(FALSE);
-   g_pvp->GetNotesDocker()->EnableWindow(FALSE);
+
+   if(g_pvp->GetNotesDocker()!=nullptr)
+      g_pvp->GetNotesDocker()->EnableWindow(FALSE);
+
    m_ptable->EnableWindow(FALSE);
 
    m_ptable->m_progressDialog.Destroy();
@@ -6256,7 +6259,8 @@ void Player::StopPlayer()
    g_pvp->GetPropertiesDocker()->EnableWindow();
    g_pvp->GetLayersDocker()->EnableWindow();
    g_pvp->GetToolbarDocker()->EnableWindow();
-   g_pvp->GetNotesDocker()->EnableWindow();
+   if(g_pvp->GetNotesDocker()!=nullptr)
+      g_pvp->GetNotesDocker()->EnableWindow();
    m_ptable->EnableWindow();
 
    LockForegroundWindow(false);
