@@ -39,6 +39,8 @@ FEATURES:
 
 - improve quality and performance of internal DMD shader (especially visible on FSS tables)
 
+- support to add custom notes to a table. To open a dockable notes dialog use the menu View -> Notes. Any text that was entered there is saved with the current active table.
+
 FIXES:
 
 - fix issue where saving a table can cost up to 4x (8x on 64bit) the temporary memory
